// WARNING: This file is auto-generated. DO NOT MODIFY.
syntax = "proto3";

package app;

// ----------------- UserService -----------------

service UserService {
   rpc GetUser(GetUserRequest) returns (User) {}
   rpc ListUsers(Empty) returns (ListUsersResponse) {}
   rpc CreateUser(CreateUserRequest) returns (User) {}
   rpc Login(LoginRequest) returns (LoginResponse) {}
   rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {}
   rpc RefreshToken(RefreshTokenRequest) returns (LoginResponse) {}
}

message GetUserRequest {
   string user_id = 1;
}

message ListUsersResponse {
   repeated User users = 1;
}

message User {
   string id = 1;  // MongoDB ObjectId as string
   string first_name = 2;
   string last_name = 3;
   string email = 4;
   string role = 5;  // e.g., "user", "admin"
}

message CreateUserRequest {
   string first_name = 1;
   string last_name = 2;
   string email = 3;
   string password = 4;
   string role = 5;
}

message LoginRequest {
   string email = 1;
   string password = 2;
}

message LoginResponse {
   string access_token = 1;
   string refresh_token = 2;
   User user = 3;
}

message ValidateTokenRequest {
   string token = 1;
}

message ValidateTokenResponse {
   bool valid = 1;
   User user = 2;
}

message RefreshTokenRequest {
   string refresh_token = 1;
}

message Empty {}
